[package]
name = "tinyvec_string"
version = "0.3.1-beta.0"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
edition = "2018"
description = "tinyvec based string types"
readme = "README.md"
repository = "https://github.com/ThatsNoMoon/tinyvec_string"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "string", "data-structures"]
categories = ["no-std", "data-structures", "text-processing"]

[dependencies]
tinyvec = "1.5"
tinyvec_macros = { version = "0.1", optional = true }
serde = { version = "1", optional = true, default-features = false }

[features]

default = []

alloc = ["tinyvec/alloc", "tinyvec_macros"]

std = ["alloc"]

rustc_1_40 = ["tinyvec/rustc_1_40"]

rustc_1_55 = ["tinyvec/rustc_1_55"]

rustc_1_57 = ["rustc_1_55"]

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
# Build docs with all features, show what things need a feature enabled
rustdoc-args = ["--cfg","docs_rs"]
all-features = true

[[test]]
name = "tinystring"
required-features = ["alloc"]

[[test]]
name = "arraystring"
required-features = ["alloc"]
